# house-prices

./: .dockerignore  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  tox.ini
app/: .gcloudignore  app.yaml  main.py  model.py
docker/: docker-container.zsh  docker-machine.zsh
docker/app/: Dockerfile  docker-build.zsh
docker/ci_tests/: docker-run.zsh
docker/db/: docker-run.zsh
docker/docker-build/: miniconda-jupyter.Dockerfile  requirements.txt
docker/src/: Dockerfile  docker-build.zsh
docker/tests/: docker-run.zsh
notebooks/: 1. data_exploration.ipynb
src/: data_ingest.py  database.py  model.py  preprocessing.py
src/app/: README.md  app.yaml  main.py  requirements.txt
src/app/credentials/: house-prices-267107-005a58e1c145.json
tests/: test_database.py
