[tool.poetry]
name = "house-prices"
version = "0.1.0"
description = ""
authors = ["julianferry94@gmail.com"]


[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.22.2"
pandas = "^1.0.1"
joblib = "^0.14.1"
jupyter = { version = "^1.0.0",  optional = true }
seaborn = { version = "^0.10.0", optional = true }

flask = "^1.1.1"
flask_restful = "^0.3.8"
gunicorn = "^20.0.4"
google-cloud-storage = { version = "^1.26.0", optional = true }
google-cloud-logging = { version = "^1.15.0", optional = true }

cryptography = "^2.8"
pymysql = "^0.9.3"
sqlalchemy = "^1.3.15"
sqlalchemy-utils = "^0.36.3"


[tool.poetry.extras]
eda = ["jupyter", "seaborn"]
gcp = ["google-cloud-storage", "google-cloud-logging"]


[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"


[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
